fix:app visibilty when background

--- a/src/style.scss
+++ b/src/style.scss
@@ -4,7 +4,6 @@
 
 body {
 	@apply h-screen flex flex-row gap-[2vw] items-stretch justify-end p-2;
-	visibility: hidden;
 }
 
 p,
